tests/test-std/ui/types.stderr
error[E0308]: mismatched types
 --> ui/types.rs:7:12
  |
7 |     parse!(l, "test: {x}");
  |            ^
  |            |
  |            expected `&str`, found `&{integer}`
  |            expected due to this
  |
  = note: expected reference `&str`
             found reference `&{integer}`

error[E0308]: mismatched types
 --> ui/types.rs:8:12
  |
8 |     parse!(342, "test: {x}");
  |            ^^^
  |            |
  |            expected `&str`, found `&{integer}`
  |            expected due to this
  |
  = note: expected reference `&str`
             found reference `&{integer}`

error[E0308]: mismatched types
 --> ui/types.rs:9:12
  |
9 |     parse!(test(), "test: {x}")
  |            ----^^
  |            |
  |            expected `&str`, found `&usize`
  |            expected due to this
  |
  = note: expected reference `&str`
             found reference `&usize`
